<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/dataUploadTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/upload_user_data_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/dataUploadDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dataUploadTitle"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/data_upload_fragment_description"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dataUploadDescription"
            android:layout_margin="16dp"
            android:gravity="center"
            android:id="@+id/data_upload_checkbox_layout">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/data_upload_checkbox"
                android:checked="true"
                android:text="@string/upload_user_data_checkbox"/>

        </LinearLayout>

        <Button
            android:id="@+id/dataUploadNextButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/data_upload_checkbox_layout"
            android:layout_margin="10dp"
            android:text="@string/next"/>

    </RelativeLayout>
</ScrollView>
