<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/fragment_user_orientation">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/erasmus_type_input_title"
            android:id="@+id/titleErasmusType"
            android:textSize="28sp"
            android:paddingTop="30dp"
            android:padding="@dimen/normal_padding_for_text_elements"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/type_chooser_description"
            android:id="@+id/descriptionErasmusType"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/titleErasmusType"
            android:padding="@dimen/normal_padding_for_text_elements"
            android:gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studying_button"
            android:id="@+id/student_button"
            android:layout_below="@+id/descriptionErasmusType"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internship_button"
            android:id="@+id/intern_button"
            android:layout_below="@+id/student_button"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>
