<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/emailInputTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/what_s_your_email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_input_description"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textAlignment="center"
            android:layout_below="@id/emailInputTitle"
            android:id="@+id/emailInputDescription"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailInputDescription">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_email_here"
                android:inputType="textEmailAddress"
                android:padding="20dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/profileDataInput_nextButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/email_text_input_layout"
            android:layout_margin="10dp"
            android:text="@string/next"/>

    </RelativeLayout>
</ScrollView>
