<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context="com.emexezidis.alex.ErasmusUoiApp.activities.Contact">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/activity_contact_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/activity_contact_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/phone_call_vector"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_us"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/secondary_title"/>

                <TextView
                    android:id="@+id/call_us_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone_number"
                    android:autoLink="phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/secondary_title"
                    android:includeFontPadding="false"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/paper_airplane_blue_vector"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail_us"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/secondary_title"/>

                <TextView
                    android:id="@+id/mail_us_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office_email"
                    android:autoLink="email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/secondary_title"
                    android:includeFontPadding="false"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/person_circle_vector"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_us"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/secondary_title"/>

                <TextView
                    android:id="@+id/visit_us_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office_address"
                    android:textColor="@color/red_accent"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/secondary_title"
                    android:includeFontPadding="false"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>