<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/fragment_user_orientation">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/are_you_an_incoming_or_outgoing_student"
                android:id="@+id/titleErasmusType"
                android:textSize="28sp"
                android:paddingTop="30dp"
                android:padding="@dimen/normal_padding_for_text_elements"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/user_orientation_description"
                android:id="@+id/descriptionErasmusType"
                android:layout_below="@+id/titleErasmusType"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/normal_padding_for_text_elements"
                android:textStyle="italic"
                android:gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outgoing_student"
                android:id="@+id/outgoing_button"
                android:layout_below="@+id/descriptionErasmusType"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incoming_student"
                android:id="@+id/incoming_button"
                android:layout_below="@+id/outgoing_button"
                android:layout_centerHorizontal="true"/>



        </RelativeLayout>

</ScrollView>