<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        style="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_for_intro_screens">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/confirmation_fragment_title"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="@dimen/intro_slider_image_size"
            android:layout_height="@dimen/intro_slider_image_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_for_intro_screen_imageviews"
            app:srcCompat="@drawable/success_vector"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxEms="18"
            android:text="@string/confirmation_fragment_text"
            android:textSize="20sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button"
            android:id="@+id/confirmation_done_button"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="@dimen/margin_for_intro_screen_imageviews"/>
    </LinearLayout>

</ScrollView>

